--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ decorum = "0.3.1"
 educe = { version = "0.5.11", default-features = false, features = ["Hash"] }
 serde = { version = "1.0.197", features = ["derive"] }
 smol_str = { version = "0.2.1", features = ["serde"] }
+thiserror = "1.0.58"
 tokio = { version = "1.37.0", features = ["full"] }
