--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bytes = "1.6.0"
 dashu-int = { version = "0.4.1", default-features = false, features = ["std", "serde"] }
 decorum = "0.3.1"
 educe = { version = "0.5.11", default-features = false, features = ["Hash"] }
+generic-tests = { version = "0.1.2", features = ["test-tokio"] }
 serde = { version = "1.0.197", features = ["derive"] }
 smol_str = { version = "0.2.1", features = ["serde"] }
 thiserror = "1.0.58"
